# discord-source

./: .gitignore  LICENSE.md  README.md  bundlebd.config.js  flake.nix  index.html  package.json  pnpm-lock.yaml  shell.nix  tsconfig.bd.json  tsconfig.json  tsconfig.scripts.json  tsconfig.tauri.json  vite.config.ts
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build.yml  release.yml
scripts/: common.ts  prepareBuild.ts  prepareDev.ts  setVersion.js  setVersion.ts
shared/: MappedMessageType.ts  SharedUtils.ts  TypedEventTarget.ts
src/: App.vue  main.ts
src-bd/: index.ts  plugin.json  utils.ts
src-bd/classes/: Settings.ts  TypedEventTarget.ts  Utils.ts  VideoManager.ts  WS.ts  WebRTCStream.ts
src-bd/types/: CallStore.d.ts  ChannelStore.d.ts  StreamData.d.ts  StreamState.d.ts  UserStore.d.ts  VoiceEngine.d.ts  captureStream.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: bd.rs  ds_installer.rs  license.rs  main.rs  web.rs  ws.rs
src-tauri/src/ws/: message.rs  signals.rs
src-tauri/web/: WS.ts  index.html  main.ts  style.css
src/assets/: main.scss
src/components/: HelloWorld.vue  ObsGuide.vue
src/layouts/default/: AppBar.vue  Default.vue  LicenseCheck.vue
src/plugins/: index.ts  vuetify.ts  webfontloader.ts
src/router/: index.ts
src/views/: Home.vue
