[package]
name = "discord-source"
version = "0.0.0"
description = "A Tauri App"
authors = ["DreamingCodes"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.HTML

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "system-tray", "devtools"] }
tokio-tungstenite = "0.18.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures-util = "0.3.26"
url = "2.3.1"
http = "0.2.9"
directories = { version = "4.0.1" }
confy = "0.5.1"
parking_lot = "0.12.1"
ts-rs = "6.2"
hardware-id = "0.3.0"
reqwest = "0.11.14"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
